@@ -3,27 +3,38 @@ package bg.soft_uni.premierlegueapp.services.impl;
 import bg.soft_uni.premierlegueapp.exceptions.ResourceNotFoundException;
 import bg.soft_uni.premierlegueapp.models.dtos.AddMessageDto;
 import bg.soft_uni.premierlegueapp.models.dtos.ExportMessageDto;
+import bg.soft_uni.premierlegueapp.models.entities.Message;
 import bg.soft_uni.premierlegueapp.models.entities.UserEntity;
+import bg.soft_uni.premierlegueapp.repositories.MessageRepository;
 import bg.soft_uni.premierlegueapp.repositories.UserRepository;
 import bg.soft_uni.premierlegueapp.services.MessageService;
 import jakarta.transaction.Transactional;
+import org.apache.catalina.User;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
+import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class MessageServiceImpl implements MessageService {
     private final UserRepository userRepository;
-    private final RestClient chatRestClient;
+    private final MessageRepository messageRepository;
+    private final ModelMapper modelMapper;
 
-    public MessageServiceImpl(UserRepository userRepository,@Qualifier("chatRestClient") RestClient restClient) {
+
+
+    public MessageServiceImpl(UserRepository userRepository, MessageRepository messageRepository, ModelMapper modelMapper) {
         this.userRepository = userRepository;
-        this.chatRestClient = restClient;
+        this.messageRepository = messageRepository;
+        this.modelMapper = modelMapper;
     }
 
     @Override
@@ -34,40 +45,29 @@ public class MessageServiceImpl implements MessageService {
             throw new ResourceNotFoundException("USER NOT FOUND!");
         }
         UserEntity userEntity = optionalUserEntity.get();
-        AddMessageDto addMessageDto = new AddMessageDto(userEntity.getId(), message);
-        chatRestClient
-                .post()
-                .uri("/chat")
-                .body(addMessageDto)
-                .retrieve();
+        Message messages = new Message(message, LocalDateTime.now(), userEntity.getId());
+        this.messageRepository.save(messages);
     }
 
     @Override
     public List<ExportMessageDto> getAllMessagesSortedByCreated() {
-        List<ExportMessageDto> messages = this.chatRestClient
-                .get()
-                .uri("/chat")
-                .accept(MediaType.APPLICATION_JSON)
-                .retrieve()
-                .body(new ParameterizedTypeReference<>() {
-                });
-        return messages.stream().map(message->{
-            Optional<UserEntity> optionalUserEntity = this.userRepository.findById(message.getUserId());
-            if(optionalUserEntity.isEmpty()){
-                throw new ResourceNotFoundException("USER NOT FOUND!");
+        List<ExportMessageDto> collect = this.messageRepository.findAll().stream().map(message -> {
+            ExportMessageDto map = this.modelMapper.map(message, ExportMessageDto.class);
+            Optional<UserEntity> optionalUser = userRepository.findById(message.getUserId());
+            if(optionalUser.isEmpty()){
+                throw new ResourceNotFoundException("USER IS NOT FOUND!");
             }
-            UserEntity userEntity = optionalUserEntity.get();
-            message.setUsername(userEntity.getUsername());
-            message.setUserEmail(userEntity.getEmail());
-            return message;
-        }).toList();
+            UserEntity userEntity = optionalUser.get();
+            map.setUsername(userEntity.getUsername());
+            map.setUserEmail(userEntity.getEmail());
+            map.setUserId(userEntity.getId());
+            return map;
+        }).sorted(Comparator.comparing(ExportMessageDto::getCreated)).collect(Collectors.toList());
+        return collect;
     }
 
     @Override
     public void removeMessage(long id) {
-        this.chatRestClient
-                .delete()
-                .uri("/chat/"+id)
-                .retrieve();
+        this.messageRepository.deleteById(id);
     }
 }
